devel
-----

* Shard synchronisation readlock aware of rebootId

* Bugfix: In an AQL cluster query, when gathering unsorted data in combination
  with a LIMIT with non-zero offset, if this offset exactly matches the number
  of documents in the first shards consumed, the rest of the documents was not
  returned.

* Fixed GET _api/gharial to also include the name property in every returned graph.
  This is a consistency fix within the API as all other APIs include the name.
  As a work around the returned _key can be used, which is identical to the name.

* Updated arangosync to 0.7.0.

* REMOTE and GATHER no longer make subqueries unsuitable for the
  `splice-subqueries` optimization.

* New internal counter and histogram support.

* Add a Prometheus endpoint for metrics, expose new metrics, old statistics
  and RocksDB metrics.

* Fixed known issue #509: ArangoSearch index consolidation does not work during creation of a link
  on existing collection which may lead to massive file descriptors consumption.

* Added support of array comparison operators to ArangoSearch.

* Added support of arrays to TOKENS function.

* Added support of arrays to PHRASE function.

* Added a new optimization called `late-document-materialization`, `late-document-materialization`
  for indexes and views correspondingly.

  This optimization reduces amount of documents to read from storage engine to the limit expicitly
  stated in LIMIT node.

* Added support of "Edge Ngrams" to `text` analyzer.

* Added support of UTF8 to `ngram` analyzer.

* Added ability to mark beginning/end of the sequence to `ngram` analyzer.

* Added a new subquery optimization called `splice-subqueries`.

  This optimization splices the execution of subqueries inside the
  execution of their surrounding query. For subqueries with a fairly
  small number of returned documents this saves a significant amount of
  overhead initializing cursors.

  This optimization is performed by the optimizer rule