@@ -43,6 +43,7 @@
 #include "Aql/ModificationNodes.h"
 #include "Aql/MultiDependencySingleRowFetcher.h"
 #include "Aql/ParallelUnsortedGatherExecutor.h"
+#include "Aql/OptimizerRulesFeature.h"
 #include "Aql/Query.h"
 #include "Aql/RemoteExecutor.h"
 #include "Aql/ScatterExecutor.h"
@@ -421,6 +422,7 @@ CostEstimate DistributeNode::estimateCost() const {
 GatherNode::GatherNode(ExecutionPlan* plan, arangodb::velocypack::Slice const& base,
                        SortElementVector const& elements)
     : ExecutionNode(plan, base),
+      _vocbase(&(plan->getAst()->query()->vocbase())),
       _elements(elements),
       _sortmode(SortMode::MinElement),
       _parallelism(Parallelism::Undefined), 
@@ -444,6 +446,7 @@ GatherNode::GatherNode(ExecutionPlan* plan, arangodb::velocypack::Slice const& b
 
 GatherNode::GatherNode(ExecutionPlan* plan, size_t id, SortMode sortMode, Parallelism parallelism) noexcept
     : ExecutionNode(plan, id), 
+      _vocbase(&(plan->getAst()->query()->vocbase())),
       _sortmode(sortMode), 
       _parallelism(parallelism),
       _limit(0) {}
@@ -545,9 +548,13 @@ bool GatherNode::isSortingGather() const noexcept {
 
 /// @brief is the node parallelizable?
 struct ParallelizableFinder final : public WalkerWorker<ExecutionNode> {
-  bool _isParallelizable = true;
+  bool const _parallelizeWrites;
+  bool _isParallelizable;
 
-  ParallelizableFinder() : _isParallelizable(true) {}
+  explicit ParallelizableFinder(TRI_vocbase_t const& _vocbase)
+      : _parallelizeWrites(_vocbase.server().getFeature<OptimizerRulesFeature>().parallelizeGatherWrites()),
+        _isParallelizable(true) {}
+
   ~ParallelizableFinder() = default;
 
   bool enterSubquery(ExecutionNode*, ExecutionNode*) override final {
@@ -561,19 +568,14 @@ struct ParallelizableFinder final : public WalkerWorker<ExecutionNode> {
       _isParallelizable = false;
       return true;  // true to abort the whole walking process
     }
-    if (node->isModificationNode()) {
-        /*
-         * TODO: enable parallelization for REMOVE, REPLACE, UPDATE
-         * as well. This seems safe as long as there is no DistributeNode
-         * and there is no further communication using Scatter/Gather.
-         * But this needs more testing first
-        && 
+    // write operations of type REMOVE, REPLACE and UPDATE
+    // can be parallelized, provided the rest of the plan
+    // does not prohibit this
+    if (node->isModificationNode() &&
+        _parallelizeWrites &&
         (node->getType() != ExecutionNode::REMOVE &&
          node->getType() != ExecutionNode::REPLACE && 
          node->getType() != ExecutionNode::UPDATE)) {
-         */
-      // REMOVEs and REPLACEs are actually parallelizable, as they are completely independent
-      // from each other on different shards
       _isParallelizable = false;
       return true;  // true to abort the whole walking process
     }
@@ -590,7 +592,7 @@ bool GatherNode::isParallelizable() const {
     return false;
   }
 
-  ParallelizableFinder finder;
+  ParallelizableFinder finder(*_vocbase);
   for (ExecutionNode* e : _dependencies) {
     e->walk(finder);
     if (!finder._isParallelizable) {
