@@ -50,7 +50,8 @@ std::vector<OptimizerRule> OptimizerRulesFeature::_rules;
 std::unordered_map<velocypack::StringRef, int> OptimizerRulesFeature::_ruleLookup;
 
 OptimizerRulesFeature::OptimizerRulesFeature(arangodb::application_features::ApplicationServer& server)
-    : application_features::ApplicationFeature(server, "OptimizerRules") {
+    : application_features::ApplicationFeature(server, "OptimizerRules"),
+      _parallelizeGatherWrites(true) {
   setOptional(false);
   startsAfter<V8FeaturePhase>();
 
@@ -62,6 +63,11 @@ void OptimizerRulesFeature::collectOptions(std::shared_ptr<arangodb::options::Pr
                      "enable or disable specific optimizer rules (use rule name prefixed with '-' for disabling, '+' for enabling)",
                      new arangodb::options::VectorParameter<arangodb::options::StringParameter>(&_optimizerRules),
                      arangodb::options::makeFlags(arangodb::options::Flags::Hidden))
+                     .setIntroducedIn(30600);
+
+  options->addOption("--query.parallelize-gather-writes",
+                     "enable write parallelization for gather nodes",
+                     new arangodb::options::BooleanParameter(&_parallelizeGatherWrites))
                      .setIntroducedIn(30600);
 }
 
